--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to HyG's Blog!</h1>
-        <small>这里记录着我的前端学习之路</small>
+        <h1>Welcome to VV's Blog!</h1>
+        <small>这里是我编程之路上的笔记、经验和感悟</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
